--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -20,12 +20,12 @@
  -option	Sets the option
  --option	Clears the option
 
- -mid		Cursor is recentered when scrolling is necessary
- -marking	Text between ^KB and cursor is highlighted
+-mid		Cursor is recentered when scrolling is necessary
+-marking	Text between ^KB and cursor is highlighted
+-lightoff	Turn off highlighting after block copy or move
  -asis		Characters 128 - 255 shown as-is
  -force		Force final newline when files are saved
  -nobackups	If you don't want backup files to be created
- -lightoff	Turn off highlighting after block copy or move
  -exask		^KX always confirms file name
 -beep		Beep on errors and when cursor goes past extremes
  -nosta		Disable top-most status line
@@ -39,9 +39,9 @@
 -noxon		Attempt to turn off ^S/^Q processing
 -orphan		Put extra files given on command line in orphaned buffers
 		instead of in windows
--dopadding	Output pad characters (for when there is no tty handshaking)
+ -dopadding	Output pad characters (for when there is no tty handshaking)
  -lines nnn	Set no. screen lines
--baud 19200	Set baud rate for terminal optimizations
+ -baud 19200	Set baud rate for terminal optimizations
  -columns nnn	Set no. screen columns
  -help		Start with help on
  -skiptop nnn	Don't use top nnn lines of the screen
@@ -60,14 +60,23 @@
 
 -guess_indent	Guess indent character (tab or space).
 
--menu_explorer Stay in menu system when a directory is selected (otherwise
+ -menu_explorer Stay in menu system when a directory is selected (otherwise
                 directory is added to path and menu is closed).
+
+ -menu_jump	Jump into file selection menu when tab is hit (otherwise, menu
+		comes up, but cursor stays in file name prompt).
 
 -icase          Search is case insensitive by default.
 
 -wrap		Search wraps
 
 -autoswap	Swap markb with markk when necessary
+
+ -joe_state	Use ~/.joe_state file
+
+ -mouse		Enable mouse support
+
+ -square	Rectangular block mode
 
  Status line definition strings.  -lmsg defines the left-justified string and
  -rmsg defines the right-justified string.  The first character of -rmsg is
@@ -96,6 +105,7 @@
   %S  '*SHELL*' if there is a shell running in window
   %M  Macro recording message
   %y  Syntax
+  %x  Context (first non-indented line going backwards)
 
  The formatting escape sequences may also be given:
  
@@ -116,7 +126,7 @@
 
  Here is a list of modes which can be set:
 
-	-utf8			File is UTF-8 coded
+	-encoding name		Set file coding (for example: utf-8, iso-8859-15)
 
 	-syntax name		Specify syntax (syntax file called
 				'name.jsf' will be loaded)
@@ -181,10 +191,28 @@
 	-msnew macro		Macro to execute when new files are saved
 	-msold macro		Macro to execute when existing files are saved
 
-	-square			Rectangular block mode
-
 	Macros for the above options are in the same format as in the key
 	binding section below- but without the key name strings.
+
+	These define the language syntax for ^G (goto matching delimiter):
+
+	-single_quoted		Text between '  ' should be ignored (this is
+				not good for regular text since ' is
+				normally used alone as an apostrophe)
+
+	-c_comment		Text between /* */ should be ignored
+
+	-cpp_comment		Text after // should be ignored
+
+	-pound_comment		Text after # should be ignored
+
+	-vhdl_comment		Text after -- should be ignored
+
+	-semi_comment		Text after ; should be ignored
+
+	-text_delimiters begin=end:if=elif=else=endif
+
+				Define word delimiters
 
  Default local options
 -highlight
@@ -196,15 +224,6 @@
 
  File name with '.'?  It's probably not a text file.
 *.*
-
- TeX
-*.tex
--wordwrap
--syntax tex
-
-*.sty
--wordwrap
--syntax tex
 
  Diff
 *
@@ -218,6 +237,15 @@
 *
 +\[1-9]\+\[0-9]\[cda]
 -syntax diff
+
+ TeX
+*.tex
+-wordwrap
+-syntax tex
+
+*.sty
+-wordwrap
+-syntax tex
 
  Text file.
 *.txt
@@ -312,18 +340,24 @@
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
 *.pl
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
 *.pm
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
  C language file
 *.c
@@ -332,6 +366,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.cpp
 -autoindent
@@ -339,6 +377,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.c++
 -autoindent
@@ -346,6 +388,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
  C language header file
 *.h
@@ -354,6 +400,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.hpp
 -autoindent
@@ -361,6 +411,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.h++
 -autoindent
@@ -368,6 +422,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
  Verilog file
 *.v
@@ -377,6 +435,9 @@
 -smarthome
 -smartbacks
 -purify
+-c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
 
  Verilog header file
 *.vh
@@ -386,6 +447,9 @@
 -smarthome
 -smartbacks
 -purify
+-c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
 
  VHDL file
 *.vhd
@@ -395,9 +459,17 @@
 -smarthome
 -smartbacks
 -purify
+-vhdl_comment
+-text_delimiters entity|ENTITY|if|IF|component|COMPONENT|loop|LOOP|configuration|CONFIGURATION|units|UNITS|record|RECORD|case|CASE|function|FUNCTION|package|PACKAGE|architecture|ARCHITECTURE|block|BLOCK|process|PROCESS|generate|GENERATE=end|END
 
  XML
 *.xml
+-wordwrap
+-autoindent
+-syntax xml
+
+ XML
+*.xsd
 -wordwrap
 -autoindent
 -syntax xml
@@ -450,100 +522,126 @@
 +#!\+\[ 	]\+\[a-z/]/csh\>
 -autoindent
 -syntax csh
-
-*.cshrc
--autoindent
--syntax csh
-
-*.login
--autoindent
--syntax csh
-
-*.logout
--autoindent
--syntax csh
+-pound_comment
 
 *.csh
 -autoindent
 -syntax csh
+-pound_comment
+
+*.login
+-autoindent
+-syntax csh
+-pound_comment
+
+*.logout
+-autoindent
+-syntax csh
+-pound_comment
 
  TCSH
 *
 +#!\+\[ 	]\+\[a-z/]/tcsh\>
 -autoindent
 -syntax csh
+-pound_comment
 
 *.tcsh
 -autoindent
 -syntax csh
+-pound_comment
 
 *.tcshrc
 -autoindent
 -syntax csh
+-pound_comment
 
  Shell
 *
 +#!\+\[ 	]\+\[a-z/]/sh\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.sh
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *profile
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
  BASH Shell
 *
 +#!\+\[ 	]\+\[a-z/]/bash\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash_login
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash_logout
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
+
+ LISP
+*.lisp
+-autoindent
+-syntax lisp
+-semi_comment
+
+*.lsp
+-autoindent
+-syntax lisp
+-semi_comment
+
+*.el
+-autoindent
+-syntax lisp
+-semi_comment
 
  KSH
 *
 +#!\+\[ 	]\+\[a-z/]/ksh\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.ksh
 -autoindent
 -syntax sh
-
- LISP
-*.lisp
--autoindent
--syntax lisp
-
-*.lsp
--autoindent
--syntax lisp
-
-*.el
--autoindent
--syntax lisp
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
  Makefile
 *akefile
 -autoindent
 -syntax conf
+-pound_comment
 
 *AKEFILE
 -autoindent
 -syntax conf
+-pound_comment
 
  Pascal
 *.p
@@ -552,6 +650,7 @@
 -smarthome
 -smartbacks
 -purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
 
 *.pas
 -autoindent
@@ -559,6 +658,7 @@
 -smarthome
 -smartbacks
 -purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
 
  Fortran
 *.f
@@ -607,7 +707,6 @@
 *.am
 -autoindent
 -syntax conf
-
 
  Mail file
 *tmp/mutt-*
@@ -669,8 +768,23 @@
 \i \i    \\\\      replaced with \\               \\n     replaced with newline       \|\i \i
 }
 
+{Math
+\i   Help Screen    \|turn off with ^XH    prev. screen ^X,    next screen ^X.     \i
+\i \i \uCOMMANDS\u (hit ESC m for math)  \uFUNCTIONS\u                                    \|\i \i
+\i \i     hex hex display mode       sin cos tab asin acos atan                   \|\i \i
+\i \i     dec decimal mode           sinh cosh tanh asinh acosh atanh             \|\i \i
+\i \i     ins type result into file  sqrt cbrt exp ln log                         \|\i \i
+\i \i    eval evaluate block         int floor ceil abs erg ergc                  \|\i \i
+\i \i    0xff enter number in hex                                                 \|\i \i
+\i \i    3e-4 floating point decimal \uBLOCK\u                                        \|\i \i
+\i \i    a=10 assign a variable      sum cnt  Sum, count                          \|\i \i
+\i \i 2+3:ins multiple commands      avg dev  Average, std. deviation             \|\i \i
+\i \i    e pi constants              \uOPERATORS\u                                    \|\i \i
+\i \i     ans previous result        ^  * / %  + -  < <= > >= == !=  &&  ||  ? :  \|\i \i
+}
+
 {Names
-\i   Help Screen    \|turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
+\i   Help Screen    \|turn off with ^XH    prev. screen ^X,    next screen ^X.     \i
 \i \i Hit TAB at file name prompts to generate menu of file names                 \|\i \i
 \i \i Or use up/down keys to access history of previously entered names           \|\i \i
 \i \i Special file names:                                                         \|\i \i
@@ -682,8 +796,11 @@
 }
 
 {Joe
-\i   Help Screen    \|turn off with ^XH   prev. screen ^X,                         \i
-\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor             \|\i \i
+\i   Help Screen    \|turn off with ^XH    prev. screen ^X,                        \i
+\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor \|\i \i
+\i \i \|\i \i
+\i \i  default jmacsrc file is here @prefix@/etc/joe/jmacsrc \|\i \i
+\i \i  additional documentation can be found here @prefix@/etc/joe/doc \|\i \i
 }
 
  FOURTH SECTION: Key bindings:
