--- a/jpicorc.in
+++ b/jpicorc.in
@@ -22,15 +22,15 @@
 
  -mid		Cursor is recentered when scrolling is necessary
 
- -marking	Text between ^KB and cursor is highlighted (use with -lightoff)
+-marking	Text between ^KB and cursor is highlighted (use with -lightoff)
+
+-lightoff	Turn off highlighting after block copy or move
 
  -asis		Characters 128 - 255 shown as-is
 
 -force		Force final newline when files are saved
 
  -nobackups	If you don't want backup files to be created
-
--lightoff	Turn off highlighting after block copy or move
 
 -exask		^KX always confirms file name
 
@@ -83,12 +83,23 @@
 
 -guess_indent	Guess indent character (tab or space).
 
--menu_explorer Stay in menu system when a directory is selected (otherwise
+ -menu_explorer Stay in menu system when a directory is selected (otherwise
                 directory is added to path and menu is closed).
+
+ -menu_jump	Jump into file selection menu when tab is hit (otherwise, menu
+		comes up, but cursor stays in file name prompt).
 
  -icase         Search is case insensitive by default.
 
  -wrap          Search wraps
+
+-autoswap	Swap markb with markk when necessary
+
+ -joe_state     Use ~/.joe_state file
+
+ -mouse		Enable mouse support
+
+ -square	Rectangular block mode
 
  Status line definition strings.  -lmsg defines the left-justified string and
  -rmsg defines the right-justified string.  The first character of -rmsg is
@@ -117,6 +128,7 @@
   %S  '*SHELL*' if there is a shell running in window
   %M  Macro recording message
   %y  Syntax
+  %x  Context (first non-indented line going backwards)
 
  These formatting escape sequences may also be given:
  
@@ -137,7 +149,7 @@
 
  Here are the modes which can be set:
 
-	-utf8			File is UTF-8 coded
+	-encoding name		Set file coding (for example: utf-8, iso-8859-15)
 
 	-syntax name		Specify syntax (syntax file called
 				'name.jsf' will be loaded)
@@ -202,10 +214,28 @@
 	-msnew macro		Macro to execute when new files are saved
 	-msold macro		Macro to execute when existing files are saved
 
-	-square			Rectangular block mode
-
 	Macros for the above options are in the same format as in the key
 	binding section below- but without the key name strings.
+
+	These define the language syntax for ^G (goto matching delimiter):
+
+	-single_quoted		Text between '  ' should be ignored (this is
+				not good for regular text since ' is
+				normally used alone as an apostrophe)
+
+	-c_comment		Text between /* */ should be ignored
+
+	-cpp_comment		Text after // should be ignored
+
+	-pound_comment		Text after # should be ignored
+
+	-vhdl_comment		Text after -- should be ignored
+
+	-semi_comment		Text after ; should be ignored
+
+	-text_delimiters begin=end:if=elif=else=endif
+
+				Define word delimiters
 
  Default local options
 -highlight
@@ -333,18 +363,24 @@
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
 *.pl
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
 *.pm
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
  C language file
 *.c
@@ -353,6 +389,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.cpp
 -autoindent
@@ -360,6 +400,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.c++
 -autoindent
@@ -367,6 +411,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
  C language header file
 *.h
@@ -375,6 +423,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.hpp
 -autoindent
@@ -382,6 +434,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.h++
 -autoindent
@@ -389,6 +445,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
  Verilog file
 *.v
@@ -398,6 +458,9 @@
 -smarthome
 -smartbacks
 -purify
+-c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
 
  Verilog header file
 *.vh
@@ -407,6 +470,9 @@
 -smarthome
 -smartbacks
 -purify
+-c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
 
  VHDL file
 *.vhd
@@ -416,9 +482,17 @@
 -smarthome
 -smartbacks
 -purify
+-vhdl_comment
+-text_delimiters entity|ENTITY|if|IF|component|COMPONENT|loop|LOOP|configuration|CONFIGURATION|units|UNITS|record|RECORD|case|CASE|function|FUNCTION|package|PACKAGE|architecture|ARCHITECTURE|block|BLOCK|process|PROCESS|generate|GENERATE=end|END
 
  XML
 *.xml
+-wordwrap
+-autoindent
+-syntax xml
+
+ XML
+*.xsd
 -wordwrap
 -autoindent
 -syntax xml
@@ -471,100 +545,126 @@
 +#!\+\[ 	]\+\[a-z/]/csh\>
 -autoindent
 -syntax csh
+-pound_comment
 
 *.csh
 -autoindent
 -syntax csh
-
-*.cshrc
--autoindent
--syntax csh
+-pound_comment
 
 *.login
 -autoindent
 -syntax csh
+-pound_comment
 
 *.logout
 -autoindent
 -syntax csh
+-pound_comment
 
  TCSH
 *
 +#!\+\[ 	]\+\[a-z/]/tcsh\>
 -autoindent
 -syntax csh
+-pound_comment
 
 *.tcsh
 -autoindent
 -syntax csh
+-pound_comment
 
 *.tcshrc
 -autoindent
 -syntax csh
+-pound_comment
 
  Shell
 *
 +#!\+\[ 	]\+\[a-z/]/sh\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.sh
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *profile
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
  BASH Shell
 *
 +#!\+\[ 	]\+\[a-z/]/bash\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash_login
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash_logout
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
+
+ LISP
+*.lisp
+-autoindent
+-syntax lisp
+-semi_comment
+
+*.lsp
+-autoindent
+-syntax lisp
+-semi_comment
+
+*.el
+-autoindent
+-syntax lisp
+-semi_comment
 
  KSH
 *
 +#!\+\[ 	]\+\[a-z/]/ksh\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.ksh
 -autoindent
 -syntax sh
-
- LISP
-*.lisp
--autoindent
--syntax lisp
-
-*.lsp
--autoindent
--syntax lisp
-
-*.el
--autoindent
--syntax lisp
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
  Makefile
 *akefile
 -autoindent
 -syntax conf
+-pound_comment
 
 *AKEFILE
 -autoindent
 -syntax conf
+-pound_comment
 
  Pascal
 *.p
@@ -573,6 +673,7 @@
 -smarthome
 -smartbacks
 -purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
 
 *.pas
 -autoindent
@@ -580,6 +681,7 @@
 -smarthome
 -smartbacks
 -purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
 
  Fortran
 *.f
@@ -653,9 +755,9 @@
 \i \i\|^B left ^F right \|^W^Y top of file \|^^  mark   \|^D  char  \|^J   format  \|^X save  \|\i \i
 \i \i\|^P up   ^N down  \|^W^V end of file \|^K  cut    \|^K  line  \|^T   spell   \|^C status\|\i \i
 \i \i\|^Y prev. screen  \|^A  beg. of line \|^U  paste  \|^[K >line \|^[T  file    \|^[Z shell\|\i \i
-\i \i\|^V next screen   \|^E  end of line  \|^O  save   \|^[H word< \|^L   refresh \|\uFILE\u     \|\i \i
-\i \i\|^Z prev. word    \|^W^T line No.    \|^[/ filter \|^[D >word \|^[^[ options \|^O save  \|\i \i
-\i \i\|^SPACE next word \|^W find ^[W next \|           \|^[- undo  \|^[=  redo    \|^R insert\|\i \i
+\i \i\|^V next screen   \|^E  end of line  \|^[U cycle  \|^[H word< \|^L   refresh \|\uFILE\u     \|\i \i
+\i \i\|^Z prev. word    \|^W^T line No.    \|^O  save   \|^[D >word \|^[^[ options \|^O save  \|\i \i
+\i \i\|^SPACE next word \|^W find ^[W next \|^[/ filter \|^[- undo  \|^[=  redo    \|^R insert\|\i \i
 }
 
 {Advanced
@@ -682,6 +784,21 @@
 \i \i    \\\\      replaced with \\               \\n     replaced with newline       \|\i \i
 }
 
+{Math
+\i   Help Screen    \|turn off with ^G     prev. screen ^[,    next screen ^[.     \i
+\i \i \uCOMMANDS\u (hit ESC m for math)  \uFUNCTIONS\u                                    \|\i \i
+\i \i     hex hex display mode       sin cos tab asin acos atan                   \|\i \i
+\i \i     dec decimal mode           sinh cosh tanh asinh acosh atanh             \|\i \i
+\i \i     ins type result into file  sqrt cbrt exp ln log                         \|\i \i
+\i \i    eval evaluate block         int floor ceil abs erg ergc                  \|\i \i
+\i \i    0xff enter number in hex                                                 \|\i \i
+\i \i    3e-4 floating point decimal \uBLOCK\u                                        \|\i \i
+\i \i    a=10 assign a variable      sum cnt  Sum, count                          \|\i \i
+\i \i 2+3:ins multiple commands      avg dev  Average, std. deviation             \|\i \i
+\i \i    e pi constants              \uOPERATORS\u                                    \|\i \i
+\i \i     ans previous result        ^  * / %  + -  < <= > >= == !=  &&  ||  ? :  \|\i \i
+}
+
 {Names
 \i   Help Screen    \|turn off with ^G     prev. screen ^[,    next screen ^[.     \i
 \i \i Hit TAB at file name prompts to generate menu of file names                 \|\i \i
@@ -696,7 +813,10 @@
 
 {Joe
 \i   Help Screen    \|turn off with ^G     prev. screen ^[,                        \i
-\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor             \|\i \i
+\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor \|\i \i
+\i \i \|\i \i
+\i \i  default joerc file is here @prefix@/etc/joe/jpicorc \|\i \i
+\i \i  additional documentation can be found here @prefix@/etc/joe/doc \|\i \i
 }
 
  FOURTH SECTION: Key bindings:
@@ -879,7 +999,8 @@ dnarw		^N
 dnarw		^[ O B
 dnarw		^[ [ B
 dnarw		^# B
-toggle_marking	^^		Marking
+drop,msg,"Mark set",rtn	^^	Drop anchor
+ toggle_marking	^^		Marking
 edit		^[ E		Edit a file
 edit		^[ ^E
 edit		^[ e
@@ -899,7 +1020,7 @@ ffirst		^W		Find first
 fnext		^[ w
 fnext		^[ W
 filt		^[ /		Filter block though file
-fmtblk		^J		Format paragraphs in block
+psh,markk,fmtblk		^J		Format paragraphs in block
 groww		^[ G		Grow window
 groww		^[ ^G
 groww		^[ g
@@ -935,7 +1056,7 @@ rtarw		^[ [ C
 rtarw          ^# C
 run		^[ !		Run a program in a window
 stat		^C   		Cursor position status
-blksave		^O		Save file
+psh,markk,blksave,query	^O		Save file
 crawll		^[ <		Pan left
 crawlr		^[ >		Pan right
 shrinkw		^[ J		Shrink window
