--- a/rjoerc.in
+++ b/rjoerc.in
@@ -45,6 +45,7 @@
  -csmode	^KF after a pervious search does a ^L instead
 
  -backpath path Directory to store backup files
+
  -floatmouse	Clicking past end of line moves the cursor past the end
 
  -rtbutton	Use the right mouse button for action, instead of the left
@@ -85,9 +86,20 @@
 -menu_explorer Stay in menu system when a directory is selected (otherwise
                 directory is added to path and menu is closed).
 
+ -menu_jump	Jump into file selection menu when tab is hit (otherwise, menu
+		comes up, but cursor stays in file name prompt).
+
  -icase         Search is case insensitive by default.
 
  -wrap          Search wraps
+
+ -autoswap	Swap markb with markk when necessary
+
+ -joe_state     Use ~/.joe_state file
+
+ -mouse		Enable mouse support
+
+ -square	Rectangular block mode
 
  Status line definition strings.  -lmsg defines the left-justified string and
  -rmsg defines the right-justified string.  The first character of -rmsg is
@@ -116,6 +128,7 @@
   %S  '*SHELL*' if there is a shell running in window
   %M  Macro recording message
   %y  Syntax
+  %x  Context (first non-indented line going backwards)
 
  These formatting escape sequences may also be given:
  
@@ -136,7 +149,7 @@
 
  Here are the modes which can be set:
 
-	-utf8			File is UTF-8 coded
+	-encoding name		Set file coding (for example: utf-8, iso-8859-15)
 
 	-syntax name		Specify syntax (syntax file called
 				'name.jsf' will be loaded)
@@ -201,10 +214,28 @@
 	-msnew macro		Macro to execute when new files are saved
 	-msold macro		Macro to execute when existing files are saved
 
-	-square			Rectangular block mode
-
 	Macros for the above options are in the same format as in the key
 	binding section below- but without the key name strings.
+
+	These define the language syntax for ^G (goto matching delimiter):
+
+	-single_quoted		Text between '  ' should be ignored (this is
+				not good for regular text since ' is
+				normally used alone as an apostrophe)
+
+	-c_comment		Text between /* */ should be ignored
+
+	-cpp_comment		Text after // should be ignored
+
+	-pound_comment		Text after # should be ignored
+
+	-vhdl_comment		Text after -- should be ignored
+
+	-semi_comment		Text after ; should be ignored
+
+	-text_delimiters begin=end:if=elif=else=endif
+
+				Define word delimiters
 
  Default local options
 -highlight
@@ -332,18 +363,24 @@
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
 *.pl
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
 *.pm
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
+-pound_comment
+-single_quoted
 
  C language file
 *.c
@@ -352,6 +389,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.cpp
 -autoindent
@@ -359,6 +400,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.c++
 -autoindent
@@ -366,6 +411,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
  C language header file
 *.h
@@ -374,6 +423,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.hpp
 -autoindent
@@ -381,6 +434,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
 *.h++
 -autoindent
@@ -388,6 +445,10 @@
 -smarthome
 -smartbacks
 -purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
  Verilog file
 *.v
@@ -397,6 +458,9 @@
 -smarthome
 -smartbacks
 -purify
+-c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
 
  Verilog header file
 *.vh
@@ -406,6 +470,9 @@
 -smarthome
 -smartbacks
 -purify
+-c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
 
  VHDL file
 *.vhd
@@ -415,9 +482,17 @@
 -smarthome
 -smartbacks
 -purify
+-vhdl_comment
+-text_delimiters entity|ENTITY|if|IF|component|COMPONENT|loop|LOOP|configuration|CONFIGURATION|units|UNITS|record|RECORD|case|CASE|function|FUNCTION|package|PACKAGE|architecture|ARCHITECTURE|block|BLOCK|process|PROCESS|generate|GENERATE=end|END
 
  XML
 *.xml
+-wordwrap
+-autoindent
+-syntax xml
+
+ XML
+*.xsd
 -wordwrap
 -autoindent
 -syntax xml
@@ -470,100 +545,126 @@
 +#!\+\[ 	]\+\[a-z/]/csh\>
 -autoindent
 -syntax csh
+-pound_comment
 
 *.csh
 -autoindent
 -syntax csh
-
-*.cshrc
--autoindent
--syntax csh
+-pound_comment
 
 *.login
 -autoindent
 -syntax csh
+-pound_comment
 
 *.logout
 -autoindent
 -syntax csh
+-pound_comment
 
  TCSH
 *
 +#!\+\[ 	]\+\[a-z/]/tcsh\>
 -autoindent
 -syntax csh
+-pound_comment
 
 *.tcsh
 -autoindent
 -syntax csh
+-pound_comment
 
 *.tcshrc
 -autoindent
 -syntax csh
+-pound_comment
 
  Shell
 *
 +#!\+\[ 	]\+\[a-z/]/sh\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.sh
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *profile
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
  BASH Shell
 *
 +#!\+\[ 	]\+\[a-z/]/bash\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash_login
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.bash_logout
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
  LISP
 *.lisp
 -autoindent
 -syntax lisp
+-semi_comment
 
 *.lsp
 -autoindent
 -syntax lisp
+-semi_comment
 
 *.el
 -autoindent
 -syntax lisp
+-semi_comment
 
  KSH
 *
 +#!\+\[ 	]\+\[a-z/]/ksh\>
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
 *.ksh
 -autoindent
 -syntax sh
+-pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 
  Makefile
 *akefile
 -autoindent
 -syntax conf
+-pound_comment
 
 *AKEFILE
 -autoindent
 -syntax conf
+-pound_comment
 
  Pascal
 *.p
@@ -572,6 +673,7 @@
 -smarthome
 -smartbacks
 -purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
 
 *.pas
 -autoindent
@@ -579,6 +681,7 @@
 -smarthome
 -smartbacks
 -purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
 
  Fortran
 *.f
@@ -693,10 +796,29 @@
 \i \i    \\\\      replaced with \\               \\n     replaced with newline       \|\i \i
 }
 
+{Math
+\i   Help Screen    \|turn off with ^KH    prev. screen ^[,    next screen ^[.     \i
+\i \i \uCOMMANDS\u (hit ESC m for math)  \uFUNCTIONS\u                                    \|\i \i
+\i \i     hex hex display mode       sin cos tab asin acos atan                   \|\i \i
+\i \i     dec decimal mode           sinh cosh tanh asinh acosh atanh             \|\i \i
+\i \i     ins type result into file  sqrt cbrt exp ln log                         \|\i \i
+\i \i    eval evaluate block         int floor ceil abs erg ergc                  \|\i \i
+\i \i    0xff enter number in hex                                                 \|\i \i
+\i \i    3e-4 floating point decimal \uBLOCK\u                                        \|\i \i
+\i \i    a=10 assign a variable      sum cnt  Sum, count                          \|\i \i
+\i \i 2+3:ins multiple commands      avg dev  Average, std. deviation             \|\i \i
+\i \i    e pi constants              \uOPERATORS\u                                    \|\i \i
+\i \i     ans previous result        ^  * / %  + -  < <= > >= == !=  &&  ||  ? :  \|\i \i
+}
+
 {Joe
 \i   Help Screen    \|turn off with ^KH    prev. screen ^[,                        \i
-\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor             \|\i \i
+\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor \|\i \i
+\i \i \|\i \i
+\i \i  default joerc file is here @prefix@/etc/joe/joerc \|\i \i
+\i \i  additional documentation can be found here @prefix@/etc/joe/doc \|\i \i
 }
+
 
  FOURTH SECTION: Key bindings:
 
